2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b6

	* Fix: Mambo popups failed to operate because the option var wasn't
	  set on systems with register_globals disabled - how did this
	  ever work?

	* Fix: Eliminate two shutterfly/print_photos notices in edit_appearance

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b5

	* Fix: We believe that this should fix the issue that some users have
	  had with extremely large Gallery installations during the upgrade
	  script, where the albums just don't show up on the page at all.

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b4

	* Fix: Display the 'view comments in nested album' links for all users
	  in commentboxtop.inc.  This was restricted to admin/owner only, so it
	  broke navigation when view comments was allowed for all users.

	* Change: Fix uninitialized variable notice

2004-07-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b3

	* Fix: Trim trailing spaces from setup vars where no-trailing-slash is
	  set.  This prevents the "/usr/bin /pnmtojpeg" issue

2004-07-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b2

	* Fix: The addition of the 'view comments' for everyone was exposing
	  hidden photos since view_comments.php had been written with only
	  the owner/admin in mind.

2004-07-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b1

        * Change: Remove bastard newlines from delete_user and delete_album that were causing
          jscript errors in Firefox.

2004-07-25  Chris Kelly <ckdake@users.sf.net> 1.4.4-RC3

	* 1.4.4-RC3 Release

2004-07-24  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b10

	* Fix: Redirect in multi_create_user didnt worked after successfull adding.
	       Reason: doctype header was set before redirect header.

2004-07-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b9

        * Fix: Skins will be ignored when embedded.  This was causing a lot